--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -106,5 +106,7 @@
     <string name="missing_subject_type">Missing subject type on questionnaire. Provide Questionnaire.subjectType to resolve.</string>
     <string name="missing_questionnaire_config">QuestionnaireConfig is required but missing.</string>
     <string name="error_populating_questionnaire">Unable to populate the questionnaire. Invalid Response.</string>
+    <string name="extraction_in_progress">Questionnaire data extraction in progress. Please wait…</string>
+    <string name="loading_questionnaire">Loading questionnaire…</string>
 
 </resources>
