--- a/docs/engineering/android-app/writing-fhir/form-authoring.mdx
+++ b/docs/engineering/android-app/writing-fhir/form-authoring.mdx
@@ -1,8 +1,8 @@
 # Form Authoring (Things to consider when writing forms)
 
-- Make sure that the **enableWhen** expressions are accompanied by the **enableBehaviour** attribute in order to avoid form crashes.
-- The **enableBehaviour** defines whether the expressions on the **enableWhen** are to use **and** or **or** logic.
-- The **enableBehaviour** options are **any** for **or** & **all** for **and**.
+- Make sure that the `enableWhen` expressions are accompanied by the `enableBehaviour` attribute in order to avoid form crashes.
+- The `enableBehaviour` defines whether the expressions on the `enableWhen` are to use `and` or `or` logic.
+- The `enableBehaviour` options are `any` for `or` & `all` for `and`.
 
 ```json
 {
