fix multiline comments

--- a/docs/engineering/android-app/introduction/readme.mdx
+++ b/docs/engineering/android-app/introduction/readme.mdx
@@ -52,7 +52,7 @@ The application uses FHIR Engine APIs from Google's [Android FHIR SDK](https://g
 
 The application syncs particular resources (conventionally, Composition and Binary) from the HAPI FHIR server to configure the app. The configurations control application workflows as well as the look and feel of the app.
 
-### Tests
+### Testing
 
 This FHIR Core repository includes:
 1. Unit tests
