--- a/docs/engineering/android-app/introduction/readme.mdx
+++ b/docs/engineering/android-app/introduction/readme.mdx
@@ -60,6 +60,8 @@ The OpenSRP Android app includes automated style, coverage, unit, user inteface 
 
 We use [ktlint](https://github.com/pinterest/ktlint) via [spotless](https://github.com/diffplug/spotless) to run style checks against the entire codebase. We target to make these style checks as strict as possible in order to reduce bikeshedding in code reviews. 
 
+We use [Jacoco](https://www.jacoco.org/jacoco/) for code coverage report generation and then [codecov](https://app.codecov.io/gh/opensrp/fhircore) to track changes in coverage over time. We enforce a minimum coverage percent on the new code added in a pull request and a minimum reduction in overall coverage percentage change when consider the changes introduced through a pull request.
+
 #### Unit tests
 
 Unit tests are divided among the [engine](https://github.com/opensrp/fhircore/tree/main/android/engine/src/test), [geowidget](https://github.com/opensrp/fhircore/tree/main/android/geowidget/src/test/java/org/smartregister/fhircore/geowidget), and [quest](https://github.com/opensrp/fhircore/tree/main/android/quest/src/test) modules. These can be run locally and are run automatically through github actions when you submit a pull request. All tests must pass for a pull request to be merged.
@@ -69,3 +71,5 @@ Unit tests are divided among the [engine](https://github.com/opensrp/fhircore/tr
 We run tests against screen renderings that function as user interface and integations tests. These are defined in the [quest](https://github.com/opensrp/fhircore/tree/main/android/quest/src/test) module. These can be run locally and are run automatically through github actions when you submit a pull request. All tests must pass for a pull request to be merged.
 
 #### Performance tests
+
+We include a set of [performance tests](https://github.com/opensrp/fhircore/tree/main/android/quest/src/androidTest/java/org/smartregister/fhircore/performance) to verify that the time taken to perform operations is not changing significantly as the code changes. These measure relative performance when running on the hosted continuous integration testing system and are not meant to reflect the amount of time an operation takes in a real world on-device scenario.
