--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -100,8 +100,13 @@
     <string name="error_fetching_user_details">Failed to fetch user details</string>
     <string name="questionnaire_not_found">Questionnaire not found.  Sync all questionnaires to fix</string>
     <string name="no_visits">No visits</string>
-    <string name="questionnaire_response_broken">Questionnaire response broken</string>
+    <string name="questionnaire_response_invalid">Questionnaire response invalid</string>
     <string name="app_version_tag_url" translatable="false">https://smartregister.org/app-version</string>
     <string name="application_version" translatable="false">Application Version</string>
+    <string name="missing_subject_type">Missing subject type on questionnaire. Provide Questionnaire.subjectType to resolve.</string>
+    <string name="missing_questionnaire_config">QuestionnaireConfig is required but missing.</string>
+    <string name="error_populating_questionnaire">Unable to populate the questionnaire. Invalid Response.</string>
+    <string name="extraction_in_progress">Processing questionnaire data…</string>
+    <string name="loading_questionnaire">Loading questionnaire…</string>
 
 </resources>
