add more further reading

--- a/docs/project-information/readme.mdx
+++ b/docs/project-information/readme.mdx
@@ -59,16 +59,26 @@ Ona created OpenSRP in 2013. Since then, Ona has led the design and development 
 
 ### Further Reading
 
-Blog articles
+#### Blog articles
+- [Presenting OpenSRP at FHIR DevDays 2023](https://ona.io/home/presenting-opensrp-at-fhir-devdays-2023/)
+- [Adopting the WHO Antenatal Care SMART Guidelines to Indonesia](https://ona.io/home/who-anc-smart-guidelines-in-indonesia/)
+- [Announcing OpenSRP 2: the next gen digital health app](https://ona.io/home/announcing-opensrp-2-the-next-gen-digital-health-app/)
+- [Sri Lanka’s digital health blueprint highlights the power of FHIR](https://ona.io/home/sri-lankas-digital-health-blueprint-highlights-the-power-of-opensrp-and-fhir/)
+- [Why the WHO SMART Guidelines and FHIR are necessary for universal health access](https://ona.io/home/why-the-who-smart-guidelines-and-fhir-are-necessary-for-universal-health-access/)
 - [Eight reasons why FHIR is important for global health](https://ona.io/home/eight-reasons-why-fhir-is-important/)
 - [Powering interoperability with a FHIR to DHIS2 adapter](https://github.com/opensrp/fhircore/blob/rw-pld-gitbook-sync/docs/readme/history/#overview)
 
-Videos
+#### Videos
+- [Introducing mobile mapping on OpenSRP FHIR to support precision healthcare](https://www.youtube.com/watch?v=S9oaJIyIUEE)
 - [Global Goods: OpenSRP](https://youtu.be/KOlfiWDr1mw)
 
-News
+#### News
 - [Case study celebrates lessons and catalytic potential of rapid, iterative software development across three countries](https://bidinitiative.org/blog/case-study-celebrates-lessons-and-catalytic-potential-of-rapid-iterative-software-development-across-three-countries/)
 - [OpenSRP named a Global Good by Digital Square](https://ona.io/home/opensrp-named-a-global-good-by-digital-square/)
 - [Integration Between MEDSINC and OpenSRP will Link Community-Level Clinical Data with National Health Information Systems](https://www.businesswire.com/news/home/20180130005503/en/Integration-Between-MEDSINC-and-OpenSRP%C2%A0will-Link-Community-Level-Clinical-Data-with-National-Health-Information-Systems)
 - [The WHO Family Planning Reference App built on OpenSRP](https://fpdigitalsolution.org/case-study/the-who-family-planning-reference-app-built-on-opensrp/#introduction)
 - [OpenSRP is a 2018 Gavi Pacesetter](https://ona.io/home/opensrp-is-a-2018-gavi-pacesetter/)
+
+#### Publications
+- [Digitalization of routine health information systems: Bangladesh, Indonesia, Pakistan](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9511663/)
+- [Transforming Rapid Diagnostic Tests for Precision Public Health: Open Guidelines for Manufacturers and Users](https://biomedeng.jmir.org/2022/2/e26800/)
