--- a/docs/engineering/android-app/configurations/questionnaire-config.mdx
+++ b/docs/engineering/android-app/configurations/questionnaire-config.mdx
@@ -106,6 +106,11 @@ These are used when generating other tasks, CarePlans and related resources.See 
 |Property | Description | Required | Default |
 |--|--|:--:|:--:|
 planDefinitions | A list of questionnaire planDefinition uuids | no | null |
+barcodeLinkId | The link ID for barcode widget used in the Questionnaire | no | null |
+saveQuestionnaireResponse | Indicate whether to save QuestionnaireResponse or not | yes | true |
+onSubmitActions | Configurations for actions invoked post Questionnaire submission | no | null |
+extractedResourceUniquePropertyExpressions | Configurations for unique properties used to identify resources during Questionnaire edit | no  | null |
+
 
 
 ## Sample questionnaire with an event workflow
