Refactor QuestionnaireResponse/Questionnaire validation implementation
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -105,7 +105,7 @@
     <string name="application_version" translatable="false">Application Version</string>
     <string name="missing_subject_type">Missing subject type on questionnaire. Provide Questionnaire.subjectType to resolve.</string>
     <string name="missing_questionnaire_config">QuestionnaireConfig is required but missing.</string>
-    <string name="error_populating_questionnaire">Unable to populate the questionnaire. Invalid Response.</string>
+    <string name="error_populating_questionnaire">Error populating some questionnaire fields. Invalid QuestionnaireResponse.</string>
     <string name="extraction_in_progress">Processing questionnaire data…</string>
     <string name="loading_questionnaire">Loading questionnaire…</string>
 
