--- a/android/engine/src/main/res/values/strings.xml
+++ b/android/engine/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="syncing_up" translatable="false">Syncing up</string>
     <string name="syncing_down" translatable="false">Syncing down</string>
     <string name="syncing_initiated">Sync initiated&#8230;</string>
-    <string name="sync_failed">Sync completed with errors. Retrying…</string>
+    git
     <string name="sync_unauthorised">Sync failed because the authentication credentials are invalid.</string>
     <string name="refresh_token_fail_error_message">Failed to retrieve credentials from the server. Please check your internet connection.</string>
     <string name="try_again">Try again</string>
