--- a/docs/engineering/android-app/writing-fhir/fhir_path.mdx
+++ b/docs/engineering/android-app/writing-fhir/fhir_path.mdx
@@ -300,3 +300,31 @@ Use of other [Value Constraint](https://build.fhir.org/ig/HL7/sdc/behavior.html#
 ]
 }
 ```
+
+## CQF expression
+
+[Cqf-expression](http://hl7.org/fhir/R4B/extension-cqf-expression.html) is used in [Questionnaire.item.text](https://build.fhir.org/questionnaire-definitions.html#Questionnaire.item.text) to make it a dynamic text. Dynamic text in this context refers to the ability to run FHIRPath, including variables, to the text content. As a result, the displayed text can dynamically change based on various parameters, such as the responses to other questionnaire items. In essence, the content of [Questionnaire.item.text](https://build.fhir.org/questionnaire-definitions.html#Questionnaire.item.text) can adapt and respond to the answers provided to other questions within the questionnaire.
+
+Facts about Cqf-expression:
+- Cqf-expression is declared in the `_text` property as extension
+- If the Cqf-expression has NOT been evaluated yet, you will see the text declared in the text property
+- Using the [translation extension](https://build.fhir.org/ig/HL7/fhir-extensions/StructureDefinition-translation.html) alongside Cqf-expression is not supported
+
+```
+{
+  "linkId": "1",
+  "text": "The text you will ONLY see, if cqf-expression has NOT been evaluated yet",
+  "_text": {
+    "extension": [
+      {
+        "url": "http://hl7.org/fhir/StructureDefinition/cqf-expression",
+        "valueExpression": {
+          "language": "text/fhirpath",
+          "expression": "'My name is ' + %name"
+        }
+      }
+    ]
+  },
+  "type": "display"
+}
+```
