--- a/android/engine/src/main/res/values/strings.xml
+++ b/android/engine/src/main/res/values/strings.xml
@@ -153,4 +153,6 @@
     <string name="error_loading_config_http_error">Could not load configuration. Please try again later</string>
     <string name="error_loading_config_no_internet">Could not load configuration. Please check your internet connection</string>
     <string name="error_loading_config_general">Error connecting to the server. Please contact the system administrator</string>
+    <string name="re_fetch_practitioner">Re-fetch Practitioner</string>
+    <string name="dev_menu">Dev Menu</string>
 </resources>
